--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/MacAndCheese.html">Homemade Mac and Cheese</a>
+    <ul>
+        <li><a href="recipes/MacAndCheese.html">Homemade Mac and Cheese</a></li>
+        <li><a href="recipes/LasagnaCasserole.html">Lasagna Casserole</a></li>
+    </ul>
 </body>
 </html>
