rename files, add pumkin-pie.html

--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Homemade Mac and Cheese</h1>
-    <img src="./image.jpg">
+    <img src="mac-and-cheese.jpg">
     <h2>Description</h2>
     <p>This is a homemade mac and cheese that I found on All Recipes. This is sure to beat out the boxed stuff and become a family favorite!</p>
     <h2>Ingredients</h2>
