--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/MacAndCheese.html">Homemade Mac and Cheese</a></li>
-        <li><a href="recipes/LasagnaCasserole.html">Lasagna Casserole</a></li>
+        <li><a href="recipes/mac-and-cheese.html">Homemade Mac and Cheese</a></li>
+        <li><a href="recipes/lasagna-casserole.html">Lasagna Casserole</a></li>
+        <li><a href="recipes/pumpkin-pie.html">Chef John's Pumkin Pie</a></li>
     </ul>
 </body>
 </html>
