--- a/recipes/lasagna-casserole.html
+++ b/recipes/lasagna-casserole.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Lasagna Casserole</h1>
     <img src="lasagna-casserole.jpg">
-    <h2>This is a recipe for lasagna casserole that I found on All Recipes. It is sure to become a staple in your meal rotation</h2>
+    <h2>Description</h2>
+    <p>This is a recipe for lasagna casserole that I found on All Recipes. It is sure to become a staple in your meal rotation</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 (12 ounce) box jumbo pasta shells</li>
