--- a/recipes/pumpkin-pie.html
+++ b/recipes/pumpkin-pie.html
@@ -9,6 +9,31 @@
 <body>
     <h1>Chef John's Pumkin Pie</h1>
     <img src="pumpkin-pie.jpg">
+    <img src="pumpkin-pie.jpg" alt="A slice of pumpkin pie with whipped cream on top">
     <h2>Description</h2>
+    <p>This is Chef John's rendition of pumpkin pie that I found on All Recipes</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (15 ounce) can pumkin puree</li>
+        <li>3 egg yolks</li>
+        <li>1 large egg</li>
+        <li>1 (14 ounce) can sweetened condensed milk</li>
+        <li>1 teaspoon ground cinnamon</li>
+        <li>1/2 teaspoon ground ginger</li>
+        <li>1/2 teaspoon fine salt</li>
+        <li>1/4 teaspoon freshly grated nutmeg</li>
+        <li>1/8 teaspoon Chinese 5-spice powder</li>
+        <li>1 9-inch unbaked pie crust</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat oven to 425 F (220 C)</li>
+        <li>Whisk together pumpkin, egg yolks, and egg in large bowl until smooth. Add sweetened condensed milk, cinnamon, ginger, salt, nutmeg, and Chinese 5-spice powder; whisk until thoroughly combined</li>
+        <li>Line a 9-inch pie plate with pie crust; crimp edges</li>
+        <li>Pour filling into crust; lightly tap on the counter to release air bubbles</li>
+        <li>Bake for 15 minutes</li>
+        <li>Reduce heat to 350 F (175 C) and bake until just set in the middle, 30 to 40 more minutes. A paring knife inserted into the filling, 1 inch from the edge, should come out clean. Allow to cool completely before serving</li>
+    </ol>
+
 </body>
 </html>
